Regress/HLL2.EXP
HLL2.ASO(12) : Error A2080: Block nesting error: .endif
HLL2.ASO(15) : Error A2209: Syntax error: .until eax == 0
HLL2.ASO(21) : Error A2191: Expression too complex for UNTILCXZ
